# SegaSystem16-Amiga

./: .gitignore  README.md
Alien_Syndrome/source/: build_rtg_interp.sh
Alien_Syndrome/source/cores/: z80.c
Alien_Syndrome/source/hal/: hwscroll.h  shinobi_assets.c  shinobi_assets.h  shinobi_audio_amiga.c  shinobi_dyntrans_amiga.c  shinobi_hwmain.c  shinobi_hwrender.c  shinobi_interp.c  shinobi_rtg_bezel.h  shinobi_rtg_bezeldata.s  shinobi_rtg_main.c
Alien_Syndrome/source/tools/: aliensyn_assets_host.c  aliensyn_host_stubs.c  aliensyn_render.c  build_aliensyn_render.sh  make_aliensyn_rtg_bezel.py  shinobi_rebase.c
Alien_Syndrome/source/tools/z80_recompiler/: Cargo.toml
Golden_Axe/assets/: Shinobi.info
Golden_Axe/source/: build_rtg_interp.sh
Golden_Axe/source/hal/: hwscroll.c  shinobi_assets.c  shinobi_gfxdata.s  shinobi_hwrender.c  shinobi_interp.c  shinobi_rtg_main.c  shinobi_sound.c
Golden_Axe/source/tools/: make_shinobi_rtg_bezel.py  shinobi_audio_harness.cpp  shinobi_decode_gfx.py  shinobi_dyntrans.c  shinobi_sound_probe.c  shinobi_xlate.h  shinobi_xlate_test.c
Golden_Axe/source/ymfm/: ymfm_opm.cpp
Shadow_Dancer/source/: build_rtg_interp.sh  slave.s
Shadow_Dancer/source/amiga/: amiga.s
Shadow_Dancer/source/cores/: z80emu.h
Shadow_Dancer/source/hal/: shinobi_assets.c  shinobi_assets.h  shinobi_hwrender.c  shinobi_interp.c  shinobi_romdata.s  shinobi_rtg_main.c  shinobi_sound.c
Shadow_Dancer/source/tools/: build_shdancer_render.sh  make_shinobi_rtg_bezel.py  shdancer_assets_host.c  (+3 more)
Shinobi/source/: build_rtg_dyntrans.sh  build_rtg_interp.sh
(+33 files in other folders)
